# vpn_bot

./: .gitignore  docker-compose.dev.yml  docker-compose.yml  pyrightconfig.json
.github/workflows/: deploy-telegram.yml  lint-server.yml  publish-telegram.yml
shared/: README.md  pyproject.toml
telegram/: Dockerfile  Dockerfile.dev  pyproject.toml
telegram/src/: linode_api.py  main.py  settings.py
telegram/src/routers/: linode.py
telegram/src/telegram/: main.py  settings.py
telegram/src/telegram/routers/: linode.py
